--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@ Version: 1.0
 Text Domain: Cleatis 
 */
 
+
 h1, h2 {
     text-align: center;
-    padding: 3vw;
+    margin-top: 2vw;
+    margin-bottom: 6vw;
 }
 
 article{
@@ -32,6 +34,7 @@ p{
 
 #sec_art{
    margin : 2vw;
+   
 }
 
 .art{
@@ -45,29 +48,70 @@ p{
     flex-direction: column;
 }
 
+#contenue2{
+    width: 35vw;
+    margin-left: 2vw;
+    flex-direction: column;
+    margin-top: -1vw;
+}
+#img1{
+  width: 16vw; 
+  padding-top: 2vw; 
+}
+
+
 footer{
     background: #B3B6B7 ;
     height: 15vw;
+    bottom:0;
+    width:100%;
+    display: flow-root;
+    margin-top: 5vw;
 }
 
 #pagination{
     display: flex; 
     justify-content: center;
     margin-bottom: 2vw;
+  
+}
+
+#pagination1{
+    margin-left: 30vw;    
 }
 
 #pagination a, span {
     padding-left: 1vw;
 }
 
+.aside{
+    padding: 1vw; 
+    width: 30%;
+    margin: -4vw 2vw 0 60vw;
+    float:right !important;
+    border: solid black 2px ;
+    position: fixed;
+}
 
-@media screen and (max-width:920px){
+.left{
+   width: 58% !important;
+   float: left;
+}
+#description{
+    width: 40vw;
+    margin:0vw 2vw 5vw 10vw;
+}
+@media screen and (max-width:980px){
+
+    #pagination1{
+        margin:0;    
+        text-align: center;
+    }
 
     article{
         
         justify-content: center;
         margin: 1vw;
-    
     }
 
     p{
@@ -78,12 +122,57 @@ footer{
         justify-content: center;
 
     }
+    .art p{
+        text-align: center;
+        padding-left: -4vw !important;
+    }
     h3{
         text-align: center;
     }
 
-    footer{
-        height: 15vw;
-    }
     
+   /* Pas toucher*/  
+    .left{
+        float: none;
+     }
+
+    .left p{
+        width: 100vw;
+        margin-left: -5vw;
+    }
+    #index p{
+        margin-left: 5vw ;
+        width: 100vw;
+    }
+    .left h3{
+        width: 98vw;
+        margin: 3vw 0 3vw -15vw;
+    }
+
+    .left a{
+        margin: 0vw !important;
+    }
+
+    .aside{
+        float: none !important;
+        position: unset;
+        width: 100%;
+        margin: unset;
+        border: solid;
+    }
+
+    .left a {
+        margin:1vw 0 5vw 70%;
+    }
+    #img1{
+        text-align: center;
+        width: unset;
+        margin-left: 70%;
+        
+    }
+
+    #description{
+        text-align: center;
+
+    }
 }
