--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ p{
     margin: 2vw;
 }
 
+
 #contenue{
     margin-left: 2vw;
     flex-direction: column;
@@ -61,8 +62,8 @@ p{
 
 
 footer{
-    background: #B3B6B7 ;
-    height: 15vw;
+    background:#5D6D7E;
+    height: 35%;
     bottom:0;
     width:100%;
     display: flow-root;
@@ -90,7 +91,8 @@ footer{
     margin: -4vw 2vw 0 60vw;
     float:right !important;
     border: solid black 2px ;
-    position: fixed;
+    position: sticky;
+    bottom:10vw;
 }
 
 .left{
@@ -101,6 +103,56 @@ footer{
     width: 40vw;
     margin:0vw 2vw 5vw 10vw;
 }
+
+#single{
+
+    margin-left: 1vw;
+
+}
+
+#single p {
+    text-align: center;
+}
+
+.pager{
+    display: flex;
+    justify-content: space-between;
+}
+
+#breadcrumbs{
+    display: flex;
+    justify-content: center;
+    margin: 0 0 3vw 1vw;    
+}
+
+#breadcrumbs span{
+    background-color: #E5E7E9;
+    padding: 1vw;
+
+}
+
+form{
+    width: 50vw;
+}
+
+footer nav{
+    display: flex;
+    flex-direction: column;
+    padding: 2vw;
+}
+
+footer nav a {
+    padding: 1vw;
+    text-decoration: none;
+    color: white;
+}
+
+footer a:hover {
+    text-decoration: none;
+    color:#D0D3D4;
+}
+
+
 @media screen and (max-width:980px){
 
     #pagination1{
@@ -130,6 +182,7 @@ footer{
         text-align: center;
     }
 
+   
     
    /* Pas toucher*/  
     .left{
@@ -175,4 +228,37 @@ footer{
         text-align: center;
 
     }
+
+    #single p{
+        width: 95vw;
+        max-width: none;
+        text-align: center;
+        margin-left: 0;
+    }
+
+    #single p img{
+        margin:0 ;
+    }
+
+    .pager{
+        width: 90vw;
+    }
+
+    #lg-contact p{
+        max-width: 100vw;
+        text-align: center;
+    }
+
+    #breadcrumbs{
+        width: 92vw !important;
+        max-width:none;
+        margin-left: 2vw !important;
+    }
+
+    form{
+        width: 90vw;
+    }
+
+    
+
 }
