--- a/style.css
+++ b/style.css
@@ -262,7 +262,8 @@ p{
     float:right !important;
     border: solid black 2px ;
     position: sticky;
-    top:3vw;
+    position: -webkit-sticky;
+    top:1vw;
 }
 
 .aside li{
@@ -472,6 +473,12 @@ input[type=text]:hover, input[type=email]:hover{
         margin: 1vw;
     }
 
+    .art img{
+        width: 35%;
+        height: 35%;
+        margin-left: 34%;
+    }
+
     /*===============================================Fin Home page======================================================*/
 
     /*===============================================Contenue blog======================================================*/ 
@@ -488,33 +495,33 @@ input[type=text]:hover, input[type=email]:hover{
     .art{
         justify-content: center;
         width: 90vw;
+        flex-direction: column;
     }
 
     .art p{
         text-align: center;
         padding-left: -4vw !important;
-    }
-
-    .art img{
-        margin-bottom: 1vw;
-        width: 45%;
-        height: 45%;
+        margin-left: 0 !important;
     }
 
     .art:hover{
-        border:none;
-        }
-
+        border: unset;
+    }
 
     h3{
         text-align: center;
     }
 
     #img1{
-        text-align: center;
         width: unset;
-        width: 70vw;
-        height: 40vw;
+        margin-bottom: 1vw;
+        width: 35%;
+        height: 35%;
+        margin-left: 35%;
+    }
+
+    #sec_art, #contenue2{
+        width: 90vw !important;
     }
 
     /*=============================================FIn Contenue blog====================================================*/ 
@@ -526,8 +533,8 @@ input[type=text]:hover, input[type=email]:hover{
     }
 
     #lg-contact p{
-        max-width: 95vw;
         text-align: center;
+        margin-left: 0 !important;
     }
 
     form{
@@ -597,7 +604,7 @@ input[type=text]:hover, input[type=email]:hover{
 
     .left p{
         width: 100vw;
-        margin-left: -5vw;
+        margin-left: -25vw;
     }
 
 
@@ -605,9 +612,6 @@ input[type=text]:hover, input[type=email]:hover{
         margin: 0vw !important;
     }
 
-    .left a {
-        margin:1vw 0 5vw 70%;
-    }
     /*=================================================Fin Left=========================================================*/ 
     
     /*==================================================Aside===========================================================*/ 
@@ -626,6 +630,11 @@ input[type=text]:hover, input[type=email]:hover{
 
     #description{
         text-align: center;
+
+    }
+    #description p{
+        margin-left: 0vw !important;
+        width: 70vw;
 
     }
     /*==============================================Fin Page catégorie==================================================*/ 
